--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,10 +3,10 @@ if-shell '[ -n "$WSL_DISTRO_NAME" ] && command -v powershell.exe >/dev/null 2>&1
   'customclip(){ local STDIN=$(cat -); powershell.exe -command "Set-Clipboard" -Value "$STDIN"; }; customclip'
 }
 
-set-option -g default-terminal 'screen-256color'
-# set-option -g default-terminal 'tmux-256color'
+# set-option -g default-terminal 'screen-256color'
+set-option -g default-terminal 'tmux-256color'
 # set-option -g terminal-overrides ',xterm-256color:RGB'
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/fish
 
 # bind t to terminal
 unbind t
@@ -103,7 +103,7 @@ set-window-option -g automatic-rename on
 set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
-set-option -g automatic-rename-format "#{?#{==:#{pane_current_command},zsh},#{b:pane_current_path},#{pane_current_command}}"
+set-option -g automatic-rename-format "#{?#{==:#{pane_current_command},fish},#{b:pane_current_path},#{pane_current_command}}"
 
 # for zen mode
 set-option -g allow-passthrough on
@@ -201,3 +201,10 @@ bind r source-file ~/.tmux.conf
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
+# new-session -s terminal
+# if (( $+commands[tmux] )); then
+#   if ! tmux has-session -t terminal 2>/dev/null; then
+#     # Create a new session named 'terminal' detached (-d)
+#     tmux new-session -s terminal
+#   fi
+# fi
