--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 10
+# font pango:Ubuntu Regular 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -114,7 +115,7 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
+set $ws1 "1: Terminal"
 set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
@@ -208,6 +209,10 @@ exec_always "setxkbmap -model pc104 -layout us,ir -variant ,, -option grp:alt_sh
 # Set caps_lock as escape
 # exec xmodmap -e "keysym Caps_Lock = Escape"
 exec_always setxkbmap -option caps:escape
+exec_always feh --bg-fill ~/Pictures/Wallpapers/wallhaven-fields-858z32.jpg
 
 # Display Resolution
 # exec_always xrandr --output [Display_name] --mode [Resolution]
+
+# Allocate applications to workspaces
+for_window [class="vivaldi-stable"] move to workspace $ws2
