--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -115,7 +115,8 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1: Terminal"
+# set $ws1 "1: "
+set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
@@ -216,3 +217,7 @@ exec_always feh --bg-fill ~/Pictures/Wallpapers/wallhaven-fields-858z32.jpg
 
 # Allocate applications to workspaces
 for_window [class="vivaldi-stable"] move to workspace $ws2
+for_window [class="Vivaldi-stable"] move to workspace $ws2
+
+# Transparency with picom compositor
+exec_always picom -f
