--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,6 +14,7 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 10
+# font pango:Droid Sans Mono 11
 # font pango:Ubuntu Regular 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -56,9 +57,9 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+# bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -88,7 +89,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-# bindsym $mod+h split h
+bindsym $mod+b split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -185,10 +186,26 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+set $wallpaper ~/Pictures/Wallpapers/wallhaven-fields-858z32.jpg
+set $wallpaper_lock ~/Pictures/Wallpapers/wallhaven-car-swamp.png
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        # status_command i3status
+        # status_command i3status -c /home/$USER/.config/i3/i3status/i3status.conf
+        status_command i3blocks -c /home/$USER/.config/i3/i3blocks/i3blocks.conf
+        i3bar_command i3bar --transparency
+        # tray_output none
+        # colors {
+        #         background $bgcolor
+        #         separator #191919
+        #         #                       border          background      text
+        #         focused_workspace       $bgcolor        $bgcolor        $text
+        #         inactive_workspace      $in-bgcolor     $in-bgcolor     $text
+        #         urgent_workspace        $u-bgcolor      $u-bgcolor      $text
+        #
+        # }
 }
 
 bindsym $mod+Ctrl+Right resize shrink width 1 px or 1 ppt
@@ -196,7 +213,8 @@ bindsym $mod+Ctrl+Up resize grow height 1 px or 1 ppt
 bindsym $mod+Ctrl+Down resize shrink height 1 px or 1 ppt
 bindsym $mod+Ctrl+Left resize grow width 1 px or 1 ppt
 
-bindsym $mod+z exec i3lock-fancy
+# bindsym $mod+z exec i3lock-fancy
+bindsym $mod+z exec i3lock -i $wallpaper_lock
 
 bindsym Mod1+Tab workspace back_and_forth
 
@@ -206,18 +224,61 @@ bindsym Mod1+Tab workspace back_and_forth
 exec_always "setxkbmap -model pc104 -layout us,ir -variant ,, -option grp:alt_shift_toggle"
 
 # Disable caps lock switch
-# exec xmodmap -e "clear lock"
+exec xmodmap -e "clear lock"
 # Set caps_lock as escape
-# exec xmodmap -e "keysym Caps_Lock = Escape"
-exec_always setxkbmap -option caps:escape
-exec_always feh --bg-fill ~/Pictures/Wallpapers/wallhaven-fields-858z32.jpg
+exec xmodmap -e "keysym Caps_Lock = Escape"
+exec_always "setxkbmap -option caps:escape"
+
+exec_always feh --bg-fill $wallpaper
 
 # Display Resolution
 # exec_always xrandr --output [Display_name] --mode [Resolution]
 
 # Allocate applications to workspaces
+# Browser
 for_window [class="vivaldi-stable"] move to workspace $ws2
 for_window [class="Vivaldi-stable"] move to workspace $ws2
 
+# Telegram
+for_window [class="Telegram"] move to workspace $ws3
+for_window [class="TelegramDesktop"] move to workspace $ws3
 # Transparency with picom compositor
-exec_always picom -f
+# exec_always picom -f
+
+# Color schemes for windows 
+# set $bgcolor    #523d64
+# set $in-bgcolor #363636
+
+# Transparent
+# set $bgcolor    #523d6499
+# set $in-bgcolor #3636364D
+#
+# set $text       #ffffff
+# set $u-bgcolor  #ff0000
+# set $indicator  #a8a3c1
+# set $in-text    #969696
+
+set $bg-color    #2f343f99
+set $interactive-bg-color #2f343f4D
+set $text             #ff0000
+set $text-color       #f3f4f5
+set $inactive-text-color  #676E7D
+set $urgent-bg-color    #E53935
+set $indicator          #00ff00
+
+
+#                       border                  background              text                      indicator (a line which shows where the next window will be placed)     
+client.focused          $bg-color               $bg-color               $text                     $indicator
+client.unfocused        $inactive-bg-color      $inactive-bg-color      $inactive-text-color      $indicator
+client.focused_inactive $inactive-bg-color      $inactive-bg-color      $inactive-text-color      $indicator
+client.urgent           $urgent-bg-color        $urgent-bg-color        $text-color               $indicator
+
+#no window borders
+hide_edge_borders both
+
+exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11
+exec --no-startup-id /usr/lib/gsd-xsettings
+exec_always --no-startup-id gnome-power-manager
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id gnome-flashback
+exec gsettings set org.gnome.gnome-flashback desktop false
