clear screen with ctrl+alt+l

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -198,6 +198,8 @@ set-option -g window-status-current-format '#[bg=#{@minimal-tmux-bg},fg=#000000]
 unbind r
 bind r source-file ~/.tmux.conf
 
+bind -n M-C-l send-keys "C-l"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
