--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,10 @@ if-shell '[ -n "$WSL_DISTRO_NAME" ] && command -v powershell.exe >/dev/null 2>&1
 }
 
 # set-option -g default-terminal 'screen-256color'
-set-option -g default-terminal 'tmux-256color'
+# set-option -g default-terminal 'tmux-256color'
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # set-option -g terminal-overrides ',xterm-256color:RGB'
 set-option -g default-shell /bin/fish
 
