remove "tmux" from top right corner

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -156,7 +156,8 @@ set -g @minimal-tmux-bg "#36a3d9"
 # set-option -g status-style bg=default,fg=default
 set-option -g status-style bg=terminal,fg=terminal
 set-option -g status-justify centre
-set-option -g status-right '#[bg=default,fg=default,bold]#{?client_prefix,,  tmux  }#[bg=#{@minimal-tmux-bg},fg=black,bold]#{?client_prefix,  tmux  ,}'
+# set-option -g status-right '#[bg=default,fg=default,bold]#{?client_prefix,,  tmux  }#[bg=#{@minimal-tmux-bg},fg=black,bold]#{?client_prefix,  tmux  ,}'
+set-option -g status-right '#[bg=default,fg=default,bold]#{?client_prefix,,     }#[bg=#{@minimal-tmux-bg},fg=black,bold]#{?client_prefix,     ,}'
 set-option -g status-left '#S'
 set-option -g window-status-format ' #I: #W '
 set-option -g window-status-current-format '#[bg=#{@minimal-tmux-bg},fg=#000000] #I: #W#{?window_zoomed_flag,  , }'
